--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
 		</section>
 		<section class="advantages">
 			<div class="container">
-				<div class="title">НАШИ ПРЕИМУЩЕСТВА</div>
+				<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</р>
 				<div class="advantages__wrapper">
 					<div class="advantages__item">
 						<img src="icons/advantages/cup.png" alt="cup" class="advantages__icon" />
@@ -78,6 +78,20 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</section>
+		<section class="consultation">
+			<div class="container">
+				<h2 class="title title_left">Получите бесплатную консультацию<br>
+					 по подбору пульсометра
+				</h2>
+				<div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
+				<form action="#" class="feed-form">
+					<input name="name" required type="text" placeholder="Ваше имя">
+					<input name="phone" required type="number" placeholder="Ваш телефон">
+					<input name="email" required type="email" placeholder="Ваш E-mail">
+					<button class="button button_submit">Заказать консультацию</button>
+				</form>
 			</div>
 		</section>
 	</body>
