--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 		<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon" />
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
 		<link rel="stylesheet" href="css/font.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
 		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 	<body>
@@ -94,5 +95,18 @@
 				</form>
 			</div>
 		</section>
+		<section class="carousel">
+			<div class="container">
+				<div class="slider">
+					<div><img src="img/slide_1.jpg" alt="slide"></div>
+					<div><img src="img/slide_2.jpg" alt="slide"></div>
+					<div><img src="img/slide_3.jpg" alt="slide"></div>
+				  </div>
+				  <button class="prev"><img src="icons/left.svg" alt="previous arrow"></button>
+				  <button class="next"><img src="icons/right.svg" alt="next arrow"></button>
+			</div>
+		</section>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
