--- a/src/index.html
+++ b/src/index.html
@@ -87,9 +87,9 @@
 					 по подбору пульсометра
 				</h2>
 				<div class="consultation__descr">Просто заполните форму заявки<br>и мы перезвоним вам в течении 10 минут</div>
-				<form action="#" class="feed-form">
+				<form id="consultation-form" action="#" class="feed-form">
 					<input name="name" required type="text" placeholder="Ваше имя">
-					<input name="phone" required type="number" placeholder="Ваш телефон">
+					<input name="phone" required   placeholder="Ваш телефон">
 					<input name="email" required type="email" placeholder="Ваш E-mail">
 					<button  class="button button_submit">Заказать консультацию</button>
 				</form>
@@ -528,7 +528,7 @@
 				<div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
 				<form class="feed-form feed-form_mt25" action="#">
 					<input name="name" required placeholder="Ваше имя" type="text"> 
-					<input name="phone" required placeholder="Ваш телефон" type="number"> 
+					<input name="phone" required placeholder="Ваш телефон"  > 
 					<input name="email" required placeholder="Ваш E-mail" type="email"> 
 					<button class="button button_submit">заказать консультацию</button>
 				</form>
@@ -540,7 +540,7 @@
 				<div class="modal__descr">Пульсометр Polar FT1</div>
 				<form class="feed-form feed-form_mt25" action="#">
 					<input name="name" required placeholder="Ваше имя" type="text"> 
-					<input name="phone" required placeholder="Ваш телефон" type="number"> 
+					<input name="phone" required placeholder="Ваш телефон"> 
 					<input name="email" required placeholder="Ваш E-mail" type="email"> 
 					<button class="button button_submit">купить</button>
 				</form>
@@ -553,9 +553,10 @@
 					в ближайшее время!</div>
 			</div>
 		</div>
-	
-
-
+		<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<script src="js/jquery.validate.min.js"></script>
+		<script src="js/jquery.maskedinput.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 		<script src="js/script.js"></script>
 	</body>
