--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,11 @@
 		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 	<body>
+		<!-- Promo section -->
 		<section id="up" class="promo">
 			<div class="container">
 				<header class="header">
-					<a href="#" class="header__logo">
+					<a href="#up" class="header__logo">
 						<img src="icons/logo.png" alt="logo" />
 					</a>
 					<div class="header__official">
@@ -49,6 +50,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- Advantages section -->
 		<section class="advantages">
 			<div class="container">
 				<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</р>
@@ -81,6 +83,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- Consultation section -->
 		<section class="consultation">
 			<div class="container">
 				<h2 class="title title_left">Получите бесплатную консультацию<br>
@@ -95,7 +98,8 @@
 				</form>
 			</div>
 		</section>
-		<section class="carousel">
+		<!-- Slider -->
+		<div class="carousel">
 			<div class="container">
 				<div class="slider">
 					<div><img src="img/slide_1.jpg" alt="slide"></div>
@@ -105,7 +109,8 @@
 				  <button class="prev"><img src="icons/left.svg" alt="previous arrow"></button>
 				  <button class="next"><img src="icons/right.svg" alt="next arrow"></button>
 			</div>
-		</section>
+		</div>
+		<!-- Catalog section -->
 		<section class="catalog">
 			<div class="container">
 				<h2 class="title">Каталог пульсометров</h2>
@@ -463,6 +468,7 @@
 				</div>
 			</div>
 		</section>
+		<!-- Feedback section -->
 		<section class="feed">
 			<div class="container">
 				<h2 class="title">отзывы клиентов</h2>
@@ -507,9 +513,9 @@
 				</div>
 			</div>
 		</section>
+		<!-- Footer section -->
 		<footer class="footer">
 			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1737.0267448501186!2d37.64624047364648!3d55.76831563990905!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a636edcd2ad%3A0x4c2ca101e2c8c617!2z0JzRj9GB0L3QuNGG0LrQuNC5INC_0YAt0LQsIDQvMywg0JzQvtGB0LrQstCwLCDQoNC-0YHRgdC40Y8sIDEwNzA3OA!5e0!3m2!1sru!2sua!4v1559894689029!5m2!1sru!2sua" width="100%" height="630" frameborder="0" style="border:0" allowfullscreen></iframe>
-	
 			<div class="footer__info">
 				<address class="footer__addr">Москва, Мясницкий проезд, д.3с1</address>
 				<a class="footer__phone" href="tel:84999228974">8 (499) 922-89-74</a>
@@ -521,6 +527,7 @@
 			</div>
 		</footer>
 
+		<!-- Modals -->
 		<div class="overlay">
 			<div class="modal" id="consultation">
 				<div class="modal__close">&times;</div>
@@ -545,7 +552,7 @@
 					<button class="button button_submit">купить</button>
 				</form>
 			</div>
-	
+
 			<div class="modal modal_mini" id="thanks">
 				<div class="modal__close">&times;</div>
 				<div class="modal__subtitle">Спасибо за вашу заявку!</div>
@@ -554,14 +561,18 @@
 			</div>
 		</div>
 
+		<!-- Button up on the right down corner -->
 		<a href="#up" class="pageup">
 			<img src="icons/chevron-up-solid.svg" alt="up">
 		</a>
-
-		<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
-		<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		
+		<!-- JQuery -->
+		<script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		<!-- Validators -->
 		<script src="js/jquery.validate.min.js"></script>
 		<script src="js/jquery.maskedinput.min.js"></script>
+		<!-- Slider and main js file -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 		<script src="js/script.js"></script>
 	</body>
