--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/bootstrap-reboot.min.css" />
 		<link rel="stylesheet" href="css/font.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.3/tiny-slider.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 		<link rel="stylesheet" href="css/style.min.css" />
 	</head>
 	<body>
@@ -55,7 +56,7 @@
 			<div class="container">
 				<h2 class="title">НАШИ ПРЕИМУЩЕСТВА</р>
 				<div class="advantages__wrapper">
-					<div class="advantages__item">
+					<div class="advantages__item animate__animated animate__fadeInUp wow">
 						<img src="icons/advantages/cup.png" alt="cup" class="advantages__icon" />
 						<div class="advantages__subtitle">Делимся опытом</div>
 						<div class="advantages__descr">
@@ -63,7 +64,7 @@
 							готовятся к соревнованиям по триатлону!
 						</div>
 					</div>
-					<div class="advantages__item">
+					<div class="advantages__item animate__animated animate__fadeInUp wow">
 						<img src="icons/advantages/heart.png" alt="heart" class="advantages__icon" />
 						<div class="advantages__subtitle">Заботимся о здоровье</div>
 						<div class="advantages__descr">
@@ -71,7 +72,7 @@
 							Вашим близким!
 						</div>
 					</div>
-					<div class="advantages__item">
+					<div class="advantages__item animate__animated animate__fadeInUp wow">
 						<img src="icons/advantages/shoe.png" alt="shoe" class="advantages__icon" />
 						<div class="advantages__subtitle">Учим бегать</div>
 						<div class="advantages__descr">
@@ -120,7 +121,7 @@
 					<li class="catalog__tab"><div>для триатлона</div></li>
 				</ul>
 				<div class="catalog__content catalog__content_active">
-					<div class="catalog-item">
+					<div class="catalog-item ">
 						<div class="catalog-item__wrapper">
 							<div class="catalog-item__content catalog-item__content_active">
 								<img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
@@ -472,7 +473,7 @@
 		<section class="feed">
 			<div class="container">
 				<h2 class="title">отзывы клиентов</h2>
-				<div class="feed__item">
+				<div class="feed__item animate__animated animate__fadeInUp wow">
 					<img src="img/feed_1.png" alt="Ирина Иванченко" class="feed__img">
 					<div class="feed__text">
 						<div class="feed__subtitle">Ирина Иванченко</div>
@@ -486,7 +487,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="feed__item">
+				<div class="feed__item animate__animated animate__fadeInUp wow">
 					<img src="img/feed_2.png" alt="Иван Сёмочкин" class="feed__img">
 					<div class="feed__text">
 						<div class="feed__subtitle">Иван Сёмочкин</div>
@@ -498,7 +499,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="feed__item">
+				<div class="feed__item animate__animated animate__fadeInUp wow">
 					<img src="img/feed_3.png" alt="Юлия Дашкина" class="feed__img">
 					<div class="feed__text">
 						<div class="feed__subtitle">Юлия Дашкина</div>
@@ -575,5 +576,6 @@
 		<!-- Slider and main js file -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
 		<script src="js/script.js"></script>
+		<script src="js/wow.min.js"></script>
 	</body>
 </html>
