--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
 						</div>
 					</div>
 					<button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
-					<div class="promo__link">или <a href="#">или ПЕРЕЙТИ В КАТАЛОГ</a></div>
+					<div class="promo__link">или <a href="#catalog">или ПЕРЕЙТИ В КАТАЛОГ</a></div>
 				</div>
 			</div>
 		</section>
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 		<!-- Catalog section -->
-		<section class="catalog">
+		<section class="catalog" id="catalog">
 			<div class="container">
 				<h2 class="title">Каталог пульсометров</h2>
 				<ul class="catalog__tabs">
