--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 						</div>
 					</div>
 					<button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
-					<div class="promo__link">или <a href="#catalog">или ПЕРЕЙТИ В КАТАЛОГ</a></div>
+					<div class="promo__link">или <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a></div>
 				</div>
 			</div>
 		</section>
